kubernetes/catalog-deployment-hpa.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
 name: catalog-deployment

spec:

 replicas: 2

 selector:
   matchLabels:
     app: catalog

 template:

   metadata:
     labels:
       app: catalog

   spec:

     containers:

     - name: catalog

       image: catalog-service:v6

       imagePullPolicy: Never

       ports:

       - containerPort: 3000

       resources:

         requests:
           cpu: "100m"
           memory: "128Mi"

         limits:
           cpu: "200m"
           memory: "256Mi"
